# TripleTree

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vercel.json
.github/workflows/: ci.yml  deploy-pages.yml
apps/cli/: CMakeLists.txt  main.cpp
apps/wasm/: CMakeLists.txt  bindings.cpp
cmake/: Sanitizers.cmake
cmake/Toolchains/: emscripten.cmake
include/triplefill/: animation.hpp  color_picker.hpp  fill.hpp  image.hpp  pixel.hpp  point.hpp  tolerance.hpp
include/triplefill/pickers/: border.hpp  quarter.hpp  solid.hpp  stripe.hpp
legacy/: Makefile  testpa3.cpp  testpa3_6_prune_after.txt  tripletree.cpp  tripletree.h  tripletree_given.cpp  tripletree_private.h
src/: animation.cpp  fill.cpp  image_png.cpp  tolerance.cpp
src/pickers/: border.cpp  quarter.cpp  solid.cpp  stripe.cpp
tests/: CMakeLists.txt  test_fill_golden.cpp  test_pickers.cpp
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: fillWorker.js  test.html
web/public/wasm/: triplefill.js  triplefill.wasm
web/scripts/: .test-worker.cjs  build-wasm.mjs  test-browser.mjs  test-wasm.mjs
web/src/: app.js  app.ts  main.js  main.ts  style.css
